--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ ul {
   text-transform: uppercase;
 }
 .logo-accent {
-  color: var(--nav-link-color);
+  color: #2E2F42;;
 }
 
 /* Navigation */
@@ -89,8 +89,7 @@ ul {
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-
-  color: #2e2f42;
+  color: var(--title-primary-color);
 }
 
 /* Features section*/
@@ -124,7 +123,7 @@ ul {
   line-height: 1.5;
   text-align: center;
   letter-spacing: 0.04em;
-  color: #4d5ae5;
+  color: var(--brand-color);
 }
 
 .portfolio-filter-bnt:hover,
@@ -137,8 +136,13 @@ ul {
 
 /* Footer */
 .footer {
-  background-color: black;
+  background-color: #2E2F42;;
 }
 .logo-footer {
   color: #ffffff;
 }
+
+
+/* <a class="logo no-decoration logo-footer" href="./index.html"
+        >Web<span class="logo-accent">Studio</span></a
+      > */
