--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ ul {
   text-transform: uppercase;
 }
 .logo-accent {
-  color: #2E2F42;;
+  color: var(--title-primary-color);
 }
 
 /* Navigation */
@@ -131,7 +131,7 @@ ul {
   background: #4d5ae5;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  color: #ffffff;
+  color: var(--background-primary-color);
 }
 
 /* Footer */
@@ -139,7 +139,7 @@ ul {
   background-color: #2E2F42;;
 }
 .logo-footer {
-  color: #ffffff;
+  color: var(--background-primary-color);
 }
 
 
