--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,7 @@ ul {
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--title-secondary-color);
+  background-color: var(--title-primary-color);
 }
 
 .hero-btn {
