--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
 body {
   background-color: var(--background-primary-color);
   color: var(--background-primary-color);
-  font-family: 'Roboto', 'Raleway', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 ul {
@@ -43,7 +43,7 @@ text-decoration: none;
 /* logo */
 .logo {
   color: var(--brand-color);
-  font-family: 'Raleway';
+  font-family: 'Raleway', sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.33;
